--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,24 +24,22 @@
 
   <h3>Titulo: {{ publicacion.title }}</h3>
   <p>Contenido: {{ publicacion.body }}</p>
-  <h4>Reacciones: </h4> 
-  <span>Likes: {{  publicacion.reactions.likes }}  </span> 
+  <h4>Reacciones: </h4>
+  <span>Likes: {{  publicacion.reactions.likes }}  </span>
   <span>Dislikes: {{ publicacion.reactions.dislikes }}  </span>
 
 
-<!--
   <ng-container *ngFor="let comment of publicacion.comments">
-    <h3>Usuario: {{ comment.username }}</h3>
+    <h3>Usuario: {{ comment.user.username }}</h3>
     <p>Comentario: {{ comment.body }}</p>
   </ng-container>
-  
--->
 
-  
+
+
 </ng-container>
 
   </div>
-  
+
 
 
 </div>
