it has a thing with the html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,30 +21,30 @@
         <p>Teléfono: {{ userData.phone }}</p>
       </div>
     </div>
-    
+
   </ng-container>
-  
+
   <div class="mt-4">
-    
+
     <!-- Mostrar posts-->
     <ng-container *ngFor="let publicacion of publicaciones" class="card mb-3">
       <h2>Posts</h2>
       <div class="card-body">
         <h3 class="card-title">Titulo: {{ publicacion.title }}</h3>
         <p ass="card-text">Contenido: {{ publicacion.body }}</p>
-        <h4 class="card-subtitle mb-2 text-muted">Reacciones: </h4> 
-        <span>👍: {{  publicacion.reactions.likes }}  </span> 
-        <span>👎: {{ publicacion.reactions.dislikes }}  </span>  
+        <h4 class="card-subtitle mb-2 text-muted">Reacciones: </h4>
+        <span>👍: {{  publicacion.reactions.likes }}  </span>
+        <span>👎: {{ publicacion.reactions.dislikes }}  </span>
       </div>
-     
 
-    <!--
+
+
     <ng-container *ngFor="let comment of publicacion.comments">
-      <h3>Usuario: {{ comment.username }}</h3>
+      <h3>Usuario: {{ comment.user.username }}</h3>
       <p>Comentario: {{ comment.body }}</p>
     </ng-container>
-  
-    -->
+
+
     </ng-container>
 
   </div>
