--- a/src/app/posts/post/post.component.html
+++ b/src/app/posts/post/post.component.html
@@ -1,1 +1,31 @@
-<p>post works!</p>
+    
+<div class="mt-4">
+    <ng-container *ngIf="post" class="card mb-3">
+        <hr class="my-4">
+        <h2>Post</h2>
+        <div class="card-body">
+        <h5 class="card-title">Título: {{ post.title }}</h5>
+        <p class="card-text">Contenido: {{ post.body }}</p>
+        <p class="card-subtitle mb-2 text-muted">Reacciones:</p>
+        <span>👍: {{ post.reactions.likes }}</span>
+        <span>👎: {{ post.reactions.dislikes }}</span>
+        </div>
+        <h2>Comentarios</h2>
+        <div *ngIf="post.comments.length > 0" class="mt-3">
+            <ng-container *ngFor="let comment of post.comments">
+            <div class="card mt-2">
+                <div class="card-body">
+                <h6 class="card-title">Usuario: {{ comment.user.username }}</h6>
+                <p class="card-text">{{ comment.body }}</p>
+                </div>
+            </div>
+            </ng-container>
+        </div>
+    </ng-container>
+</div>    
+    
+
+
+
+   
+    
