--- a/src/app/user/user-data/user-data.component.html
+++ b/src/app/user/user-data/user-data.component.html
@@ -1,2 +1,12 @@
-
+<div *ngIf="user" class="card">
+    <div class="card-body">
+      <h3 class="card-title">Usuario encontrado</h3>
+      <p><strong>Username:</strong> {{ user.username }}</p>
+      <p><strong>Nombre:</strong> {{ user.firstName }}</p>
+      <p><strong>Apellido:</strong> {{ user.lastName }}</p>
+      <p><strong>Correo:</strong> {{ user.email }}</p>
+      <p><strong>Teléfono:</strong> {{ user.phone }}</p>
+    </div>
+  </div>
+  
   
